[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/CarterOne-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.313726 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.227451, 0.278431, 0.505882, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 572.0
margin_right = 336.0
margin_bottom = 597.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 0.952941, 0.952941, 0.647059 )
custom_fonts/font = SubResource( 7 )
text = "Made for the Buddy Up Jam: Summer 2022"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 601.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 6 )
text = "The Legend of Bigfoot"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 265.0
margin_right = 1024.0
margin_bottom = 530.0
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 63.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="TutorialButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer2"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 63.0
focus_mode = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "How to play"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 67.0
margin_right = 1024.0
margin_bottom = 130.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 63.0
focus_mode = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Play"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 134.0
margin_right = 1024.0
margin_bottom = 197.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="SettingsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer3"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 63.0
focus_mode = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 201.0
margin_right = 1024.0
margin_bottom = 264.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer4"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 63.0
focus_mode = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Credits"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 530.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_top = 70

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer2/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/MarginContainer4/CreditsButton" to="." method="_on_CreditsButton_pressed"]
